// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`IconButton > renders a Default IconButton 1`] = `
<div>
  <button
    aria-disabled="false"
    class="_icon-button_339b22"
    data-kind="primary"
    role="button"
    style="--cpd-icon-button-size: 32px;"
    tabindex="0"
  >
    <div
      class="_indicator-icon_849abf"
      style="--cpd-icon-button-size: calc(32px * 0.75);"
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.175 13.825Q10.35 15 12 15t2.825-1.175T16 11t-1.175-2.825T12 7 9.175 8.175 8 11t1.175 2.825m4.237-1.412A1.93 1.93 0 0 1 12 13q-.825 0-1.412-.588A1.93 1.93 0 0 1 10 11q0-.825.588-1.412A1.93 1.93 0 0 1 12 9q.825 0 1.412.588Q14 10.175 14 11t-.588 1.412"
        />
        <path
          d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10m-2 0a8 8 0 1 0-16 0 8 8 0 0 0 16 0"
        />
        <path
          d="M16.23 18.792a13 13 0 0 0-1.455-.455 11.6 11.6 0 0 0-5.55 0q-.73.18-1.455.455a8 8 0 0 1-1.729-1.454q1.336-.618 2.709-.95A13.8 13.8 0 0 1 12 16q1.65 0 3.25.387 1.373.333 2.709.95a8 8 0 0 1-1.73 1.455"
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`IconButton > renders a DefaultDisabled IconButton 1`] = `
<div>
  <button
    aria-disabled="true"
    class="_icon-button_339b22"
    data-kind="primary"
    role="button"
    style="--cpd-icon-button-size: 32px;"
    tabindex="0"
  >
    <div
      class="_indicator-icon_849abf"
      style="--cpd-icon-button-size: calc(32px * 0.75); --cpd-color-icon-tertiary: var(--cpd-color-icon-disabled);"
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.175 13.825Q10.35 15 12 15t2.825-1.175T16 11t-1.175-2.825T12 7 9.175 8.175 8 11t1.175 2.825m4.237-1.412A1.93 1.93 0 0 1 12 13q-.825 0-1.412-.588A1.93 1.93 0 0 1 10 11q0-.825.588-1.412A1.93 1.93 0 0 1 12 9q.825 0 1.412.588Q14 10.175 14 11t-.588 1.412"
        />
        <path
          d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10m-2 0a8 8 0 1 0-16 0 8 8 0 0 0 16 0"
        />
        <path
          d="M16.23 18.792a13 13 0 0 0-1.455-.455 11.6 11.6 0 0 0-5.55 0q-.73.18-1.455.455a8 8 0 0 1-1.729-1.454q1.336-.618 2.709-.95A13.8 13.8 0 0 1 12 16q1.65 0 3.25.387 1.373.333 2.709.95a8 8 0 0 1-1.73 1.455"
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`IconButton > renders a WithCriticalIndicator IconButton 1`] = `
<div>
  <button
    aria-disabled="false"
    class="_icon-button_339b22"
    data-indicator="critical"
    data-kind="primary"
    role="button"
    style="--cpd-icon-button-size: 32px;"
    tabindex="0"
  >
    <div
      class="_indicator-icon_849abf"
      data-indicator="critical"
      style="--cpd-icon-button-size: calc(32px * 0.75);"
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.175 13.825Q10.35 15 12 15t2.825-1.175T16 11t-1.175-2.825T12 7 9.175 8.175 8 11t1.175 2.825m4.237-1.412A1.93 1.93 0 0 1 12 13q-.825 0-1.412-.588A1.93 1.93 0 0 1 10 11q0-.825.588-1.412A1.93 1.93 0 0 1 12 9q.825 0 1.412.588Q14 10.175 14 11t-.588 1.412"
        />
        <path
          d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10m-2 0a8 8 0 1 0-16 0 8 8 0 0 0 16 0"
        />
        <path
          d="M16.23 18.792a13 13 0 0 0-1.455-.455 11.6 11.6 0 0 0-5.55 0q-.73.18-1.455.455a8 8 0 0 1-1.729-1.454q1.336-.618 2.709-.95A13.8 13.8 0 0 1 12 16q1.65 0 3.25.387 1.373.333 2.709.95a8 8 0 0 1-1.73 1.455"
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`IconButton > renders a WithIndicator IconButton 1`] = `
<div>
  <button
    aria-disabled="false"
    class="_icon-button_339b22"
    data-indicator="default"
    data-kind="primary"
    role="button"
    style="--cpd-icon-button-size: 32px;"
    tabindex="0"
  >
    <div
      class="_indicator-icon_849abf"
      data-indicator="default"
      style="--cpd-icon-button-size: calc(32px * 0.75);"
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.175 13.825Q10.35 15 12 15t2.825-1.175T16 11t-1.175-2.825T12 7 9.175 8.175 8 11t1.175 2.825m4.237-1.412A1.93 1.93 0 0 1 12 13q-.825 0-1.412-.588A1.93 1.93 0 0 1 10 11q0-.825.588-1.412A1.93 1.93 0 0 1 12 9q.825 0 1.412.588Q14 10.175 14 11t-.588 1.412"
        />
        <path
          d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10m-2 0a8 8 0 1 0-16 0 8 8 0 0 0 16 0"
        />
        <path
          d="M16.23 18.792a13 13 0 0 0-1.455-.455 11.6 11.6 0 0 0-5.55 0q-.73.18-1.455.455a8 8 0 0 1-1.729-1.454q1.336-.618 2.709-.95A13.8 13.8 0 0 1 12 16q1.65 0 3.25.387 1.373.333 2.709.95a8 8 0 0 1-1.73 1.455"
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`IconButton > renders a WithIndicatorDisabled IconButton 1`] = `
<div>
  <button
    aria-disabled="true"
    class="_icon-button_339b22"
    data-indicator="default"
    data-kind="primary"
    role="button"
    style="--cpd-icon-button-size: 32px;"
    tabindex="0"
  >
    <div
      class="_indicator-icon_849abf"
      data-indicator="default"
      style="--cpd-icon-button-size: calc(32px * 0.75); --cpd-color-icon-tertiary: var(--cpd-color-icon-disabled);"
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.175 13.825Q10.35 15 12 15t2.825-1.175T16 11t-1.175-2.825T12 7 9.175 8.175 8 11t1.175 2.825m4.237-1.412A1.93 1.93 0 0 1 12 13q-.825 0-1.412-.588A1.93 1.93 0 0 1 10 11q0-.825.588-1.412A1.93 1.93 0 0 1 12 9q.825 0 1.412.588Q14 10.175 14 11t-.588 1.412"
        />
        <path
          d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10m-2 0a8 8 0 1 0-16 0 8 8 0 0 0 16 0"
        />
        <path
          d="M16.23 18.792a13 13 0 0 0-1.455-.455 11.6 11.6 0 0 0-5.55 0q-.73.18-1.455.455a8 8 0 0 1-1.729-1.454q1.336-.618 2.709-.95A13.8 13.8 0 0 1 12 16q1.65 0 3.25.387 1.373.333 2.709.95a8 8 0 0 1-1.73 1.455"
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`IconButton > renders a WithSecondaryKind IconButton 1`] = `
<div>
  <button
    aria-disabled="false"
    class="_icon-button_339b22"
    data-kind="secondary"
    role="button"
    style="--cpd-icon-button-size: 32px;"
    tabindex="0"
  >
    <div
      class="_indicator-icon_849abf"
      style="--cpd-icon-button-size: calc(32px * 0.75);"
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.175 13.825Q10.35 15 12 15t2.825-1.175T16 11t-1.175-2.825T12 7 9.175 8.175 8 11t1.175 2.825m4.237-1.412A1.93 1.93 0 0 1 12 13q-.825 0-1.412-.588A1.93 1.93 0 0 1 10 11q0-.825.588-1.412A1.93 1.93 0 0 1 12 9q.825 0 1.412.588Q14 10.175 14 11t-.588 1.412"
        />
        <path
          d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10m-2 0a8 8 0 1 0-16 0 8 8 0 0 0 16 0"
        />
        <path
          d="M16.23 18.792a13 13 0 0 0-1.455-.455 11.6 11.6 0 0 0-5.55 0q-.73.18-1.455.455a8 8 0 0 1-1.729-1.454q1.336-.618 2.709-.95A13.8 13.8 0 0 1 12 16q1.65 0 3.25.387 1.373.333 2.709.95a8 8 0 0 1-1.73 1.455"
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`IconButton > renders a WithSecondaryKindAndNoBackground IconButton 1`] = `
<div>
  <button
    aria-disabled="false"
    class="_icon-button_339b22 _no-background_339b22"
    data-kind="secondary"
    role="button"
    style="--cpd-icon-button-size: 32px;"
    tabindex="0"
  >
    <div
      class="_indicator-icon_849abf"
      style="--cpd-icon-button-size: calc(32px * 0.75);"
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.175 13.825Q10.35 15 12 15t2.825-1.175T16 11t-1.175-2.825T12 7 9.175 8.175 8 11t1.175 2.825m4.237-1.412A1.93 1.93 0 0 1 12 13q-.825 0-1.412-.588A1.93 1.93 0 0 1 10 11q0-.825.588-1.412A1.93 1.93 0 0 1 12 9q.825 0 1.412.588Q14 10.175 14 11t-.588 1.412"
        />
        <path
          d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10m-2 0a8 8 0 1 0-16 0 8 8 0 0 0 16 0"
        />
        <path
          d="M16.23 18.792a13 13 0 0 0-1.455-.455 11.6 11.6 0 0 0-5.55 0q-.73.18-1.455.455a8 8 0 0 1-1.729-1.454q1.336-.618 2.709-.95A13.8 13.8 0 0 1 12 16q1.65 0 3.25.387 1.373.333 2.709.95a8 8 0 0 1-1.73 1.455"
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`IconButton > renders a WithSuccessIndicator IconButton 1`] = `
<div>
  <button
    aria-disabled="false"
    class="_icon-button_339b22"
    data-indicator="success"
    data-kind="primary"
    role="button"
    style="--cpd-icon-button-size: 32px;"
    tabindex="0"
  >
    <div
      class="_indicator-icon_849abf"
      data-indicator="success"
      style="--cpd-icon-button-size: calc(32px * 0.75);"
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.175 13.825Q10.35 15 12 15t2.825-1.175T16 11t-1.175-2.825T12 7 9.175 8.175 8 11t1.175 2.825m4.237-1.412A1.93 1.93 0 0 1 12 13q-.825 0-1.412-.588A1.93 1.93 0 0 1 10 11q0-.825.588-1.412A1.93 1.93 0 0 1 12 9q.825 0 1.412.588Q14 10.175 14 11t-.588 1.412"
        />
        <path
          d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10m-2 0a8 8 0 1 0-16 0 8 8 0 0 0 16 0"
        />
        <path
          d="M16.23 18.792a13 13 0 0 0-1.455-.455 11.6 11.6 0 0 0-5.55 0q-.73.18-1.455.455a8 8 0 0 1-1.729-1.454q1.336-.618 2.709-.95A13.8 13.8 0 0 1 12 16q1.65 0 3.25.387 1.373.333 2.709.95a8 8 0 0 1-1.73 1.455"
        />
      </svg>
    </div>
  </button>
</div>
`;
